add endpoint user/me
